--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.flyway.password=${DB_PASS}
 spring.flyway.schemas=mastermart
 spring.flyway.default-schema=mastermart
 spring.flyway.baseline-on-migrate=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=5MB
